# LeaseFlow-Protocol-Contracts

./: ADVANCED_OPTIMIZATION_FEATURES.md  ARCHITECTURE.md  BOUNDED_ITERATION_IMPLEMENTATION.md  Cargo.toml  DEPENDENCY_AUDIT_REPORT.md  FINAL_VERIFICATION.md  IMPLEMENTATION_SUMMARY.md  ISSUE_179_RATE_LIMITING_IMPLEMENTATION.md  ISSUE_187_IMPLEMENTATION_SUMMARY.md  MULTISIG_FEE_VALIDATION.md  PR_DESCRIPTION_ISSUE_173.md  README.md  SAFE_MATH_OPTIMIZATION_REPORT.md  SECURITY.md  SECURITY_HARDENING_RECOMMENDATIONS.md  TEMPORARY_STORAGE_REFACTORING.md  VELOCITY_GUARD_PR.md  deny.toml
.github/workflows/: security-audit.yml  test.yml
contracts/leaseflow/: Cargo.toml
contracts/leaseflow/src/: iteration_limits.rs  iteration_limits_tests.rs  lease_creation_rate_limit.rs  lib.rs  test.rs
contracts/leaseflow_contracts/src/: advanced_yield_integration.rs  collateral_health_monitor.rs  early_termination_tests.rs  emergency_pause_tests.rs  enhanced_yield_generation.rs  governance_tests.rs  iteration_limits.rs  iteration_limits_tests.rs  lease_creation_rate_limit.rs  lease_creation_rate_limit_tests.rs  lease_payment_router.rs  lessee_access_token.rs  lessee_access_token_tests.rs  lessor_rights_nft.rs  lessor_rights_nft_tests.rs  lib.rs  oracle_fallback_tests.rs  oracle_governance.rs  performance_benchmarks.rs  property_attributes.rs  proration.rs  rate_limit_admin.rs  renewal_tests.rs  rent_escalation.rs  rent_escalation_tests.rs  safe_math_128.rs  safe_math_128_tests.rs  security_deposit_tests.rs  sep12_identity.rs  storage_cleanup.rs  storage_cleanup_tests.rs  storage_tier_tests.rs  test.rs  timelock_upgrade.rs  velocity_guard.rs  velocity_guard_tests.rs  wear_tear_precision.rs  wear_tear_precision_tests.rs
contracts/leaseflow_contracts/test_snapshots/test/: test_create_lease_instance_with_security_deposit.1.json  test_lease_amendment.1.json  test_terminate_lease_before_end_date_fails.1.json
crates/leaseflow_math/src/: lib.rs
fuzz/: Cargo.toml  FUZZ_FRACTIONAL_RENT_EPOCH_BOUNDARIES.md
fuzz/fuzz_targets/: fuzz_fractional_rent_epoch_boundaries.rs
scripts/: check_wasm_size.sh
