[workspace]
resolver = "2"
members = [
  "contracts/*",
  "crates/*",
  "fuzz",
]

[workspace.dependencies]
soroban-sdk = "25"
leaseflow_math = { path = "crates/leaseflow_math" }
# Pin critical dependency versions to avoid conflicts
hashbrown = "0.16.1"
rand = "0.9.2"
stellar-strkey = "0.0.16"
syn = "2.0.115"
itertools = "0.10.5"
num-traits = "0.2.19"
serde = "1.0.228"
serde_json = "1.0.149"
sha2 = "0.10.9"
ed25519-dalek = "2.2.0"
zeroize = "1.8.2"

[workspace.metadata.audit]
db-path = "~/.cargo/advisory-db"
db-urls = ["https://github.com/rustsec/advisory-db"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true