[package]
name = "leaseflow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[workspace]
resolver = "2"

members = [
    "contracts/lease_flow",
]

[workspace.dependencies]
soroban-sdk = { version = "22.0.1", features = ["testutils"] }